test/kobra-code/syntax-errors/dangling-dot-dot-declaration-2.ks
$ d = anon(a,b):
  return a + b
.. ..